# nf_integrator

./: .gitignore  debug_nf.py  pyproject.toml
benchmarks/: functions.py  plot.py  registry.py  test_plot.py
experiments/: eval_nf_checkpoint.py  final_compare.py  plot_uniform.py  test_nf_model.py  test_uniform.py  test_vegas.py  train_nf_A.py  train_nf_A_floor001.py  train_nf_A_floor005.py  train_nf_A_floor010-setting2.py  train_nf_A_floor010.py  train_nf_B.py  train_nf_C.py
mc_baselines/: uniform_mc.py  vegas_integrate.py
mg5/scripts/: py.py  run_zg_parton_ecm1000.mg5
nf/: cube_flow.py  evaluate.py  losses.py  train.py
nf/flows/: realnvp_nd.py
nf_integrator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nfmodel/physics/: zg_me.py
nfmodel/scripts/: compare_mg5_mc_nf_zg.py  plot.ipynb  plot_observables_zg.py  zg_pipeline_costh.py
notebooks/: 01_visualize.ipynb  02_debug_NF.ipynb
results/nf/: double_gaussian_d2_nf_A_kl_sweep.json  easy_four_gaussian_d2_nf_A_kl_floor001_sweep.json  easy_four_gaussian_d2_nf_A_kl_floor005_sweep.json  easy_four_gaussian_d2_nf_A_kl_floor010-setting2_sweep.json  easy_four_gaussian_d2_nf_A_kl_floor010_sweep.json  easy_four_gaussian_d2_nf_A_kl_sweep.json  gaussian_family_d10_nf_A_kl_sweep.json  gaussian_family_d10_nf_B_raw_std_sweep.json  gaussian_family_d10_nf_C_kl_raw_std_sweep.json  gaussian_family_d10_nf_untrained_sweep.json  gaussian_family_d2_nf_A_kl_sweep.json  gaussian_family_d2_nf_B_raw_std_sweep.json  gaussian_family_d2_nf_C_kl_raw_std_sweep.json  (+5 more)
utils/: plot_loss.py  plot_results.py
(+781 files in other folders)
