[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-integrator"
version = "0.1.0"
description = "Normalizing-flow-based integration experiments"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*", "experiments*", "losses*", "mc_baselines*", "nf*", "utils*"]